[package]
name = "simpleOS"
version = "0.1.0"
authors = ["gonearewe <cristmactavish@outlook.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.0"